# LogicGrowsOnTrees-network

./: .gitignore  CHANGELOG.md  LICENSE  LogicGrowsOnTrees-network.cabal  Visitor-network.cabal
Control/Visitor/Parallel/BackEnd/: Network.hs  Network.hs~
examples/: count-all-nqueens-solutions.hs  count-all-trivial-tree-leaves.hs
sources/LogicGrowsOnTrees/Parallel/Adapter/: Network.hs
sources/Visitor/Parallel/Adapter/: Network.hs
sources/Visitor/Parallel/BackEnd/: Network.hs
tests/: tests.hs
